--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -23,10 +23,10 @@ eleventyNavigation:
 
     <section id="int-hero">
         <h1 id="home-h">Contact Us</h1>
-        <picture>
-            <source media="(max-width: 600px)" srcset="/assets/images/cabinets2-m.jpg">
-            <source media="(min-width: 601px)" srcset="/assets/images/cabinets2.jpg">
-            <img aria-hidden="true" decoding="async" src="/assets/images/cabinets2.jpg" alt="kitchen cabinets" loading="eager" width="2500" height="1667">
+        <picture class="cs-picture">
+            <source media="(max-width: 600px)" srcset="/assets/images/Webdesign_1.jpg">
+            <source media="(min-width: 601px)" srcset="/assets/images/Webdesign_1.jpg">
+            <img aria-hidden="true" decoding="async" src="/assets/images/Webdesign_1.jpg" alt="new home" width="2250" height="1500" loading="eager">
         </picture>
     </section>
 
