--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -63,7 +63,7 @@ eleventyNavigation:
             <span class="cs-topper">Best-In-Class</span>
             <h2 class="cs-title">Why Choose Us?</h2>
             <p class="cs-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                We focus on your needs as a business and tailor our hand-coded templates to suit. Our process is fast, but nevers comprimises quality or performance.
             </p>
         </div>
         <ul class="cs-card-group">
