--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -41,7 +41,7 @@ eleventyNavigation:
                     <span class="cs-topper">Contact</span>
                     <h2 class="cs-title">Get in Touch</h2>
                     <p class="cs-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ridiculus elementum ullamcorper ipsum porttitor aliquam. Id magna urna ultrices odio pulvinar. Sed ut.
+                        Got a question? Need a website?  Send us an email or call!
                     </p>
                 </div>
                 <label>
@@ -76,10 +76,9 @@ eleventyNavigation:
                 <!--Address-->
                 <span class="cs-header">Address</span>
                 <a class="cs-link" href="{{client.address.mapLink}}">
-                    {{client.address.lineOne}},
+                    {{client.address.lineOne}}
                     <br/>
-                    {{client.address.lineTwo}},
-                    <br/>
+                    
                     <span class="cs-block">
                         {{client.address.city}}
                         {{client.address.state}}
