--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -69,7 +69,7 @@ eleventyNavigation:
         <ul class="cs-card-group">
             <li class="cs-item">
                 <picture class="cs-picture">
-                    <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Why-Choose/icon1.svg" loading="lazy" decoding="async" alt="icon" width="40" height="40" aria-hidden="true">
+                    <img class="cs-icon" src="/assets/svgs/customize-computer.svg" loading="lazy" decoding="async" alt="icon" width="40" height="40" aria-hidden="true">
                 </picture>
                 <h3 class="cs-h3">No Pre-Written Content </h3>
                 <p class="cs-item-text">
@@ -78,7 +78,7 @@ eleventyNavigation:
             </li>
             <li class="cs-item">
                 <picture class="cs-picture">
-                    <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Why-Choose/icon2.svg" loading="lazy" decoding="async" alt="icon" width="40" height="40" aria-hidden="true">
+                    <img class="cs-icon" src="/assets/svgs/build-alt.svg" loading="lazy" decoding="async" alt="icon" width="40" height="40" aria-hidden="true">
                 </picture>
                 <h3 class="cs-h3">No Page Builders</h3>
                 <p class="cs-item-text">
@@ -87,7 +87,7 @@ eleventyNavigation:
             </li>
             <li class="cs-item">
                 <picture class="cs-picture">
-                    <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Why-Choose/icon3.svg" loading="lazy" decoding="async" alt="icon" width="40" height="40" aria-hidden="true">
+                    <img class="cs-icon" src="/assets/svgs/file-edit.svg" loading="lazy" decoding="async" alt="icon" width="40" height="40" aria-hidden="true">
                 </picture>
                 <h3 class="cs-h3">No Limits On Design</h3>
                 <p class="cs-item-text">
@@ -96,7 +96,7 @@ eleventyNavigation:
             </li>
             <li class="cs-item">
                 <picture class="cs-picture">
-                    <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Why-Choose/icon4.svg" loading="lazy" decoding="async" alt="icon" width="40" height="40" aria-hidden="true">
+                    <img class="cs-icon" src="/assets/svgs/badget-check-alt.svg" loading="lazy" decoding="async" alt="icon" width="40" height="40" aria-hidden="true">
                 </picture>
                 <h3 class="cs-h3">No Compromise</h3>
                 <p class="cs-item-text">
