--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -76,7 +76,7 @@ eleventyNavigation:
                 <!--Address-->
                 <span class="cs-header">Address</span>
                 <a class="cs-link" href="{{client.address.mapLink}}">
-                    {{client.address.lineOne}}
+                   <!-- {{client.address.lineOne}} -->
                     <br/>
                     
                     <span class="cs-block">
