--- a/src/content/pages/services.html
+++ b/src/content/pages/services.html
@@ -86,7 +86,7 @@ eleventyNavigation:
         <ul class="cs-card-group">
             <li class="cs-item">
                 <a class="cs-link" href="">
-                    <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fcase.svg" alt="icon" width="" height="" loading="lazy" decoding="async" aria-hidden="true">
+                    <img class="cs-icon" src="/assets/svgs/circle-1.svg" alt="icon" width="" height="" loading="lazy" decoding="async" aria-hidden="true">
                     <h3 class="cs-h3">Discover</h3>
                     <p class="cs-item-text">
                         During the Discovery phase, we gather all necessary information about your business, goals, and target audience.                    
@@ -100,7 +100,7 @@ eleventyNavigation:
             </li>
             <li class="cs-item">
                 <a href="" class="cs-link">
-                    <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fcase.svg" alt="icon" width="" height="" loading="lazy" decoding="async" aria-hidden="true">
+                    <img class="cs-icon" src="/assets/svgs/circle-2.svg" alt="icon" width="" height="" loading="lazy" decoding="async" aria-hidden="true">
                     <h3 class="cs-h3">Design</h3>
                     <p class="cs-item-text">
                         In the Design stage, we create a full website mockup that aligns with your branding and expectations.
@@ -114,7 +114,7 @@ eleventyNavigation:
             </li>
             <li class="cs-item">
                 <a href="" class="cs-link">
-                    <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fcase.svg" alt="icon" width="" height="" loading="lazy" decoding="async" aria-hidden="true">
+                    <img class="cs-icon" src="/assets/svgs/circle-3.svg" alt="icon" width="" height="" loading="lazy" decoding="async" aria-hidden="true">
                     <h3 class="cs-h3">Develop</h3>
                     <p class="cs-item-text">
                         The Development phase involves transforming your approved design into a fully functional and responsive website.
@@ -128,7 +128,7 @@ eleventyNavigation:
             </li>
             <li class="cs-item">
                 <a class="cs-link" href="">
-                    <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fcase.svg" alt="icon" width="" height="" loading="lazy" decoding="async" aria-hidden="true">
+                    <img class="cs-icon" src="/assets/svgs/circle-4.svg" alt="icon" width="" height="" loading="lazy" decoding="async" aria-hidden="true">
                     <h3 class="cs-h3">Deploy</h3>
                     <p class="cs-item-text">
                         Finally, the Deployment phase includes launching your new website and making it live for your audience.
