--- a/src/index.html
+++ b/src/index.html
@@ -120,26 +120,26 @@ eleventyNavigation:
             </div>
             <ul class="cs-card-group">
                 <li class="cs-item">
-                    <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/check-circle.svg" alt="icon" width="48" height="48">
+                    <img class="cs-icon" loading="lazy" decoding="async" src="assets/svgs/responsive.svg" alt="icon" width="48" height="48">
                     <h3 class="cs-h3">Fully Responsive</h3>
                     <p class="cs-item-text">
                         We never use any page builders. Our hand-coded websites are fully responsive by design, guaranteeing seamless functionality across all devices and screen sizes.                    </p>
                 </li>
                 <li class="cs-item">
-                    <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/speedometer.svg" alt="icon" width="48" height="48">
+                    <img class="cs-icon" loading="lazy" decoding="async" src="assets/svgs/mobile_first.svg" alt="icon" width="48" height="48">
                     <h3 class="cs-h3">Mobile First Design</h3>
                     <p class="cs-item-text">
                         Over 60% of internet traffic is from mobile devices, so our mobile-first design approach results in websites that are intuitive, visually appealing, and optimised for smartphones and tablets.                    </p>
                 </li>
                 <li class="cs-item">
-                    <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/Like.svg" alt="icon" width="48" height="48">
+                    <img class="cs-icon" loading="lazy" decoding="async" src="assets/svgs/speed.svg" alt="icon" width="48" height="48">
                     <h3 class="cs-h3">Built For Speed</h3>
                     <p class="cs-item-text">
                         Our websites are built for speed. Our hand-coded websites deliver lightning-fast loading times and an exceptional browsing experience for your customers and for SEO.
                     </p>
                 </li>
                 <li class="cs-item">
-                    <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/Like.svg" alt="icon" width="48" height="48">
+                    <img class="cs-icon" loading="lazy" decoding="async" src="assets/svgs/person-check.svg" alt="icon" width="48" height="48">
                     <h3 class="cs-h3">Designed For You</h3>
                     <p class="cs-item-text">
                         With our Signature Subscription, we take care of all aspects of your website maintenance and support, allowing you to focus on what you do best - growing your business!                    </p>
@@ -172,7 +172,7 @@ eleventyNavigation:
                 <li class="cs-item">
                     <picture class="cs-picture">
                         <img class="cs-icon"
-                                src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/engineering%201%20red.svg"
+                                src="assets/svgs/network.svg"
                                 loading="lazy" decoding="async" alt="icon" width="33" height="38" aria-hidden="true">
                     </picture>
                     <!-- Text Grouped For Flexbox-->
@@ -183,7 +183,7 @@ eleventyNavigation:
                 </li>
                 <li class="cs-item">
                     <picture class="cs-picture">
-                        <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/brake-red.svg"
+                        <img class="cs-icon" src="assets/svgs/file-edit.svg"
                                 loading="lazy" decoding="async" alt="icon" width="33" height="38" aria-hidden="true">
                     </picture>
                     <!-- Text Grouped For Flexbox-->
@@ -195,7 +195,7 @@ eleventyNavigation:
                 <li class="cs-item">
                     <picture class="cs-picture">
                         <img class="cs-icon"
-                                src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/air-conditioner-red.svg"
+                                src="assets/svgs/user-headset.svg"
                                 loading="lazy" decoding="async" alt="icon" width="33" height="38" aria-hidden="true">
                     </picture>
                     <!-- Text Grouped For Flexbox-->
@@ -207,7 +207,7 @@ eleventyNavigation:
                 <li class="cs-item">
                     <picture class="cs-picture">
                         <img class="cs-icon"
-                                src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/motor%201%20red.svg" loading="lazy"
+                                src="assets/svgs/customize-computer.svg" loading="lazy"
                                 decoding="async" alt="icon" width="33" height="38" aria-hidden="true">
                     </picture>
                     <!-- Text Grouped For Flexbox-->
@@ -219,7 +219,7 @@ eleventyNavigation:
                 <li class="cs-item">
                     <picture class="cs-picture">
                         <img class="cs-icon"
-                                src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/alloy-wheel-red.svg" loading="lazy"
+                                src="assets/svgs/hundred-points.svg" loading="lazy"
                                 decoding="async" alt="icon" width="33" height="38" aria-hidden="true">
                     </picture>
                     <!-- Text Grouped For Flexbox-->
@@ -231,7 +231,7 @@ eleventyNavigation:
                 <li class="cs-item">
                     <picture class="cs-picture">
                         <img class="cs-icon"
-                                src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/contamination-red.svg"
+                                src="assets/svgs/google.svg"
                                 loading="lazy" decoding="async" alt="icon" width="33" height="38" aria-hidden="true">
                     </picture>
                     <!-- Text Grouped For Flexbox-->
@@ -268,7 +268,7 @@ eleventyNavigation:
             </div>
             <ul class="cs-card-group">
                 <li class="cs-item">
-                    <img class="cs-quote" aria-hidden="true" src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/quote-blue.svg" decoding="async" alt="quote icon" width="40" height="33">
+                    <img class="cs-quote" aria-hidden="true" src="/assets/svgs/comment-quote.svg" decoding="async" alt="quote icon" width="40" height="33">
                     <p class="cs-review">
                         I have used CleanPro service for about four years. I describe myself very picky and difficult to be pleased. Exceeded my expectations. 
                     </p>
@@ -276,7 +276,7 @@ eleventyNavigation:
                     <span class="cs-job">Georgia Blind Sports Association</span>
                 </li>
                 <li class="cs-item">
-                    <img class="cs-quote" aria-hidden="true" src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/quote-blue.svg" decoding="async" alt="quote icon" width="40" height="33">
+                    <img class="cs-quote" aria-hidden="true" src="/assets/svgs/comment-quote.svg" decoding="async" alt="quote icon" width="40" height="33">
                     <p class="cs-review">
                     More customer reviews are coming soon!
                     </p>
@@ -284,7 +284,7 @@ eleventyNavigation:
                     <span class="cs-job">Coming Soon</span>
                 </li>
                 <li class="cs-item">
-                    <img class="cs-quote" aria-hidden="true" src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/quote-blue.svg" decoding="async" alt="quote icon" width="40" height="33">
+                    <img class="cs-quote" aria-hidden="true" src="/assets/svgs/comment-quote.svg" decoding="async" alt="quote icon" width="40" height="33">
                     <p class="cs-review">
                         More customer reviews are coming soon!
                     </p>
