--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -63,7 +63,7 @@ eleventyNavigation:
             <span class="cs-topper">Best-In-Class</span>
             <h2 class="cs-title">Why Choose Us?</h2>
             <p class="cs-text">
-                We focus on your needs as a business and tailor our hand-coded templates to suit. Our process is fast, but nevers comprimises quality or performance.
+                We focus on your needs as a business and tailor our hand-coded templates to suit. Our process is fast, but never comprimises quality or performance.
             </p>
         </div>
         <ul class="cs-card-group">
@@ -91,7 +91,7 @@ eleventyNavigation:
                 </picture>
                 <h3 class="cs-h3">No Limits On Design</h3>
                 <p class="cs-item-text">
-                    Need something changing? No problem, our signature subscription comes with lifetime updates.
+                    Need something changed? No problem, our signature subscription comes with lifetime updates.
                 </p>
             </li>
             <li class="cs-item">
@@ -100,7 +100,7 @@ eleventyNavigation:
                 </picture>
                 <h3 class="cs-h3">No Compromise</h3>
                 <p class="cs-item-text">
-                    We will never compromise on quality or speed. This is why we all our sites are hand-coded from scratch.
+                    We will never compromise on quality or speed. This is why all our sites are hand-coded from scratch.
                 </p>
             </li>
         </ul>
