--- a/src/index.html
+++ b/src/index.html
@@ -270,7 +270,7 @@ eleventyNavigation:
                 <li class="cs-item">
                     <img class="cs-quote" aria-hidden="true" src="/assets/svgs/comment-quote.svg" decoding="async" alt="quote icon" width="40" height="33">
                     <p class="cs-review">
-                        I have used CleanPro service for about four years. I describe myself very picky and difficult to be pleased. Exceeded my expectations. 
+                        BookStreet gave us a beautiful website. They were easy to work with and very professional. 
                     </p>
                     <span class="cs-name">Hal Simpson</span>
                     <span class="cs-job">Georgia Blind Sports Association</span>
