--- a/src/content/pages/portfolio.html
+++ b/src/content/pages/portfolio.html
@@ -1,7 +1,7 @@
 ---
 title: 'Portfolio | BookStreet Web Design'
-description: 'Meta description for the page'
-preloadImg: '/assets/images/cabinets2.jpg'
+description: 'Portfolio Page'
+preloadImg: '/assets/images/Webdesign_1.jpg'
 permalink: 'portfolio/'
 eleventyNavigation:
     key: Portfolio
