--- a/src/content/pages/project-one.html
+++ b/src/content/pages/project-one.html
@@ -1,7 +1,7 @@
 ---
 title: 'Example One | BookStreet Web Design'
-description: 'Meta description for the page'
-preloadImg: '/assets/images/cabinets2.jpg'
+description: 'Example One Page'
+preloadImg: '/assets/images/Webdesign_1.jpg'
 permalink: 'project-one/'
 eleventyNavigation:
     key: Coming Soon
