--- a/src/content/pages/project-two.html
+++ b/src/content/pages/project-two.html
@@ -1,7 +1,7 @@
 ---
 title: 'Example Two | BookStreet Web Design'
-description: 'Meta description for the page'
-preloadImg: '/assets/images/cabinets2.jpg'
+description: 'Example Two Page'
+preloadImg: '/assets/images/Webdesign_1.jpg'
 permalink: 'project-two/'
 eleventyNavigation:
     key: Coming Soon
