--- a/src/content/pages/services.html
+++ b/src/content/pages/services.html
@@ -1,7 +1,7 @@
 ---
 title: 'Services | BookStreet Web Designs'
-description: 'Meta description for the page'
-preloadImg: '/assets/images/cabinets2.jpg'
+description: 'Services Page'
+preloadImg: '/assets/images/Webdesign_1.jpg'
 permalink: 'services/'
 eleventyNavigation:
     key: Services
