--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -1,7 +1,7 @@
 ---
-title: 'About | Code Stitch Web Designs'
-description: 'Meta description for the page'
-preloadImg: '/assets/images/cabinets2.jpg'
+title: 'About | BookStreet Web Designs'
+description: 'About Us Page'
+preloadImg: '/assets/images/Webdesign_1.jpg'
 permalink: 'about/'
 eleventyNavigation:
     key: About Us
@@ -45,9 +45,9 @@ eleventyNavigation:
                 <span class="cs-author">Bryan McCoskey - BookStreet Web Design</span>
             </div>
             <picture class="cs-picture">
-                <source media="(max-width: 600px)" srcset="/assets/images/bryan.jpg">
-                <source media="(min-width: 601px)" srcset="/assets/images/bryan.jpg">
-                <img loading="lazy" decoding="async" src="/assets/images/bryan.jpg" alt="person looking left" width="328" height="540" aria-hidden="true">
+                <source media="(max-width: 600px)" srcset="/assets/images/bryan-photo.jpg">
+                <source media="(min-width: 601px)" srcset="/assets/images/bryan-photo.jpg">
+                <img loading="lazy" decoding="async" src="/assets/images/bryan-photo.jpg" alt="person looking left" width="328" height="540" aria-hidden="true">
             </picture>
         </div>
     </div>
