--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -1,7 +1,7 @@
 ---
-title: 'Contact | Code Stitch Web Designs'
-description: 'Meta description for the page'
-preloadImg: '/assets/images/cabinets2.jpg'
+title: 'Contact | BookStreet Web Designs'
+description: 'Contact Page'
+preloadImg: '/assets/images/Webdesign_1.jpg'
 permalink: 'contact/'
 eleventyNavigation:
     key: Contact Us
