--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 ---
 title: 'BookStreet Web Design'
-description: 'Meta description for the page'
-preloadImg: '/assets/images/landing.jpg'
+description: 'BookStreet Main Page'
+preloadImg: '/assets/images/Webdesign_2.jpg'
 permalink: '/'
 tags: 'sitemap' # Sitemap will use all pages in content/, due to content.json. As index.html is not included in content/ we need to manually add the sitemap tag to this page (only).
 eleventyNavigation:
