--- a/src/content/pages/project-one.html
+++ b/src/content/pages/project-one.html
@@ -6,7 +6,7 @@ permalink: 'project-one/'
 eleventyNavigation:
     key: Coming Soon
     order: 4100
-    parent: Examples
+    parent: Resources
 ---
 
 {% extends "layouts/base.html" %}
@@ -24,9 +24,9 @@ eleventyNavigation:
     <section id="int-hero">
         <h1 id="home-h">Coming Soon!</h1>
         <picture class="cs-picture">
-            <source media="(max-width: 600px)" srcset="/assets/images/Webdesign_1.jpg">
-            <source media="(min-width: 601px)" srcset="/assets/images/Webdesign_1.jpg">
-            <img aria-hidden="true" decoding="async" src="/assets/images/Webdesign_1.jpg" alt="new home" width="2250" height="1500" loading="eager">
+            <source media="(max-width: 600px)" srcset="/assets/images/nightsky.jpg">
+            <source media="(min-width: 601px)" srcset="/assets/images/nightsky.jpg">
+            <img aria-hidden="true" decoding="async" src="/assets/images/nightsky.jpg" alt="new home" width="2250" height="1500" loading="eager">
         </picture>
     </section>
 
