--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -24,9 +24,9 @@ eleventyNavigation:
     <section id="int-hero">
         <h1 id="home-h">Contact Us</h1>
         <picture class="cs-picture">
-            <source media="(max-width: 600px)" srcset="/assets/images/Webdesign_1.jpg">
-            <source media="(min-width: 601px)" srcset="/assets/images/Webdesign_1.jpg">
-            <img aria-hidden="true" decoding="async" src="/assets/images/Webdesign_1.jpg" alt="new home" width="2250" height="1500" loading="eager">
+            <source media="(max-width: 600px)" srcset="/assets/images/nightsky.jpg">
+            <source media="(min-width: 601px)" srcset="/assets/images/nightsky.jpg">
+            <img aria-hidden="true" decoding="async" src="/assets/images/nightsky.jpg" alt="new home" width="2250" height="1500" loading="eager">
         </picture>
     </section>
 
@@ -41,7 +41,7 @@ eleventyNavigation:
                     <span class="cs-topper">Contact</span>
                     <h2 class="cs-title">Get in Touch</h2>
                     <p class="cs-text">
-                        Got a question? Need a website?  Send us an email or call!
+                        At Lodestar Academy, we wholeheartedly believe that community involvement and your insights are essential to the success of our school. We truly value your voice, so if you have any questions, ideas, or comments, please don’t hesitate to share them with us.
                     </p>
                 </div>
                 <label>
@@ -88,8 +88,8 @@ eleventyNavigation:
 
                 <!-- Background Image-->
                 <picture class="cs-bg-picture">
-                    <source media="(min-width: 601px)" srcset="/assets/images/Webdesign_2.jpg">
-                    <img aria-hidden="true" decoding="async" src="/assets/images/Webdesign_2.jpg" alt="building" loading="lazy" width="2500" height="1667">
+                    <source media="(min-width: 601px)" srcset="/assets/images/neurodiversity.jpg">
+                    <img aria-hidden="true" decoding="async" src="/assets/images/neurodiversity.jpg" alt="building" loading="lazy" width="2500" height="1667">
                 </picture>
 
             </div>
