new color palette

--- a/src/content/pages/services.html
+++ b/src/content/pages/services.html
@@ -23,9 +23,9 @@ eleventyNavigation:
     <section id="int-hero">
         <h1 id="home-h">Pricing</h1>
         <picture class="cs-picture">
-            <source media="(max-width: 600px)" srcset="/assets/images/nightsky.jpg">
-            <source media="(min-width: 601px)" srcset="/assets/images/nightsky.jpg">
-            <img aria-hidden="true" decoding="async" src="/assets/images/nightsky.jpg" alt="new home" width="2250" height="1500" loading="eager">
+            <source media="(max-width: 600px)" srcset="/assets/images/banner.jpg">
+            <source media="(min-width: 601px)" srcset="/assets/images/banner.jpg">
+            <img aria-hidden="true" decoding="async" src="/assets/images/banner.jpg" alt="new home" width="2250" height="1500" loading="eager">
         </picture>
     </section>
 
@@ -126,7 +126,7 @@ eleventyNavigation:
                         If you have multiple children enrolled at Lodestar Academy, we are pleased to offer discounts to help make attendance more affordable. The first child’s registration and tuition will be charged at full price, while each additional child will receive a 50% reduction in the registration fee and a 20% discount on monthly tuition.
                         If tuition is paid in advance for the entire school year, you'll receive a 10% discount on tuition and registration costs.
                     </p>
-                    <a href="/contact" class="cs-link">
+                    <a href="" class="cs-link">
                         Enroll Now
                         <img class="cs-arrow" loading="lazy" decoding="async"
                             src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/green-arrow.svg" alt="icon"
