--- a/src/content/pages/faq.html
+++ b/src/content/pages/faq.html
@@ -20,11 +20,11 @@ eleventyNavigation:
     <!-- ============================================ -->
 
     <section id="int-hero">
-        <h1 id="home-h">FAQ</h1>
+        <h1 id="home-h">About Us</h1>
         <picture class="cs-picture">
-            <source media="(max-width: 600px)" srcset="/assets/images/nightsky.jpg">
-            <source media="(min-width: 601px)" srcset="/assets/images/nightsky.jpg">
-            <img aria-hidden="true" decoding="async" src="/assets/images/nightsky.jpg" alt="new home" width="2250" height="1500" loading="eager">
+            <source media="(max-width: 600px)" srcset="/assets/images/banner.jpg">
+            <source media="(min-width: 601px)" srcset="/assets/images/banner.jpg">
+            <img aria-hidden="true" decoding="async" src="/assets/images/banner.jpg" alt="new home" width="2250" height="1500" loading="eager">
         </picture>
 
     </section>
